add send post functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,15 @@ thanks Gennadii, it works! , but i have one more question, for example, if i wan
 
 
 
+    <!-- send post activity-->
+
+    <string name="send_post_title">发消息</string>
+
+
+
+
+
+
 
 
 
